--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,12 @@ body {
   color: var(--black);
 }
 
+button {
+  outline: none;
+  border: none;
+  background-color: transparent;
+}
+
 li {
   list-style: none;
 }
@@ -732,7 +738,7 @@ header .start-btn:hover {
 .client_feedback {
   display: flex;
   align-items: center;
-  justify-content:center;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 1.2rem;
 }
@@ -804,7 +810,7 @@ header .start-btn:hover {
 
 /* ------------------- Benefits Section -------------------- */
 
-.benefits{
+.benefits {
   padding: 8.75rem 0;
   background: url("/assets/images/benefit-bg.png");
   background-repeat: no-repeat;
@@ -812,13 +818,13 @@ header .start-btn:hover {
   background-size: cover;
 }
 
-.benefits_content{
+.benefits_content {
   display: flex;
   flex-direction: column;
   gap: 56px;
 }
 
-.benefits_headings{
+.benefits_headings {
   width: 100%;
   display: flex;
   align-items: flex-end;
@@ -826,7 +832,7 @@ header .start-btn:hover {
   gap: 1rem;
 }
 
-.benefits_headings .left_headings p{
+.benefits_headings .left_headings p {
   font-family: var(--font-inter);
   font-size: var(--fs-7);
   letter-spacing: 0.5%;
@@ -840,23 +846,23 @@ header .start-btn:hover {
   border-radius: 50px;
 }
 
-.benefits_headings .left_headings h2{
+.benefits_headings .left_headings h2 {
   font-size: var(--fs-2);
   font-weight: 700;
   line-height: 120%;
   width: 85%;
-  color: #1D1F2C;
+  color: #1d1f2c;
 }
 
-.benefits_headings .right_article p{
+.benefits_headings .right_article p {
   font-family: var(--font-inter);
   font-size: var(--fs-4);
   line-height: 26px;
-  color: #1D1F2C;
+  color: #1d1f2c;
   width: 90%;
 }
 
-.benefit_container{
+.benefit_container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -865,15 +871,15 @@ header .start-btn:hover {
   color: var(--black-500);
 }
 
-.benefit_box{
+.benefit_box {
   background-color: var(--white);
   padding: 32px;
- height: 340px;
- border-radius: 16px;
- width: 31.5%;
+  height: 340px;
+  border-radius: 16px;
+  width: 31.5%;
 }
 
-.benefit_box .benefit_img{
+.benefit_box .benefit_img {
   height: 80px;
   width: 80px;
   background: #1f107e;
@@ -885,11 +891,11 @@ header .start-btn:hover {
   justify-content: center;
 }
 
-.benefit_box .benefit_img img{
+.benefit_box .benefit_img img {
   width: 32px;
 }
 
-.benefit_box h3{
+.benefit_box h3 {
   padding-top: 24px;
   padding-bottom: 20px;
   font-weight: 700;
@@ -899,17 +905,16 @@ header .start-btn:hover {
   width: 95%;
 }
 
-.benefit_box p{
+.benefit_box p {
   color: var(--black-400);
   font-family: var(--font-mulish);
   font-size: var(--fs-4);
   line-height: 150%;
 }
 
-
 /* ------------------- Problem & Solution Section --------------------  */
 
-.ps{
+.ps {
   padding-bottom: 8.75rem;
 }
 
@@ -939,15 +944,16 @@ header .start-btn:hover {
   color: var(--black-500);
 }
 
-.ps_container{
- margin-top: 80px;
+.ps_container {
+  margin-top: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 2rem;
 }
 
-.left-box, .right_box{
+.left-box,
+.right_box {
   width: 50%;
 
   padding: 32px;
@@ -956,45 +962,42 @@ header .start-btn:hover {
   gap: 12px;
 }
 
-
-.left-box ul
-{
+.left-box ul {
   list-style-type: none;
   padding-left: 1rem;
   padding-top: 24px;
 }
 
-.left-box ul li{
+.left-box ul li {
   list-style-type: decimal;
 }
 
-.left-box h3{
+.left-box h3 {
   font-size: var(--fs-3);
   font-weight: 700;
   letter-spacing: 0.5%;
   color: var(--black-500);
 }
 
-.left-box ul li p{
+.left-box ul li p {
   font-size: var(--fs-4);
   font-family: var(--font-inter);
   line-height: 26px;
   color: var(--black-500);
 }
 
-
-.right_box .right_box_content{
+.right_box .right_box_content {
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   gap: 24px;
 }
-.right_box .right_box_content img{
+.right_box .right_box_content img {
   height: 20px;
   width: 20px;
 }
 
-.right_box .right_box_content p{
+.right_box .right_box_content p {
   color: var(--black-500);
   font-size: var(--fs-4);
   font-family: var(--font-inter);
@@ -1002,9 +1005,110 @@ header .start-btn:hover {
   margin-top: -0.2rem;
 }
 
-
-
 /* ------------------- Question Section -------------------- */
+
+.accordion_section {
+  padding-bottom: 7rem;
+  background: url("/assets/images/Q&A-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.accordion_container {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 2rem;
+  height: 682px;
+}
+
+.accordion_headings,
+.accordion {
+  width: 50%;
+}
+
+.accordion_headings .accordion_title {
+  margin-top: 1rem;
+  font-size: var(--fs-7);
+  font-family: var(--font-inter);
+  color: var(--white);
+  background: #1f107e;
+  background: -webkit-linear-gradient(to right, #1f107e, #c467ec);
+  background: linear-gradient(to right, #1f107e, #c467ec);
+  padding: 12px 24px;
+  width: 220px;
+  text-align: center;
+  border-radius: 50px;
+  cursor: default;
+}
+
+.accordion_headings .accordion_subtitle {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  width: 75%;
+  font-size: var(--fs-2);
+  font-weight: 600;
+  line-height: 120%;
+  color: var(--black-500);
+}
+
+.accordion_headings .accordion_article {
+  width: 80%;
+  font-family: var(--font-inter);
+  font-size: var(--fs-4);
+  line-height: 26px;
+  color: var(--black-400);
+}
+
+.accordion {
+  display: flex;
+  flex-direction: column;
+  gap: 1.2rem;
+  padding: 1rem 0;
+}
+
+
+.accordion-item {
+  padding: 16px 32px;
+  border-radius: 16px;
+}
+
+.accordion-button {
+  background-color: transparent !important;
+  outline: none !important;
+  border: none !important;
+  padding: 16px 0;
+  color: var(--black-500);
+  font-family: var(--font-inter);
+  line-height: 16px;
+  font-size: var(--fs-4);
+  font-weight: 500;
+}
+
+.accordion-button:active{
+  outline: none !important;
+  border: none !important;
+}
+
+.card-body p {
+  margin-top: 1.5rem;
+  font-family: var(--font-inter);
+  font-size: var(--fs-6);
+  line-height: 140%;
+  letter-spacing: 0.5%;
+  color: var(--black-400);
+}
+
+
+.accordion-button::after {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='%23333' xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' d='M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z' clip-rule='evenodd'/%3e%3c/svg%3e");
+  transform: scale(0.7) !important;
+}
+
+.accordion-button:not(.collapsed)::after {
+  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16'  xmlns='http://www.w3.org/2000/svg'%3e%3cpath fill-rule='evenodd' d='M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z' clip-rule='evenodd'/%3e%3c/svg%3e");
+}
 /* ------------------- Wishlist Section -------------------- */
 /* ------------------- Footer -------------------- */
 /* ------------------- Copyright -------------------- */
